<resources>
    <string name="app_name">KotlinAplication</string>
    <string name="error_internal">Houston, we have a server-side problem. Try again in a few minutes.</string>
    <string name="error_bad_request">Validation error. Please check input parameters.</string>
    <string name="error_unknown">Ops... Something went wrong</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_cant_be_empty">Username can\'t be empty!</string>
    <string name="password_cant_be_too_short">Password must contain at least 4 characters!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_characters">Characters</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_locations">Locations</string>
    <string name="title_auth">Auth</string>
    <string name="title_episode_details">Episode details</string>
    <string name="title_character_details">Character details</string>
    <string name="title_location_details">Location details</string>
    <string name="title_users">Users</string>
    <string name="title_user_details">User details</string>
    <string name="avatar">Avatar</string>
</resources>
